# code-nautilus

./: .gitignore  code-nautilus.py  pyproject.toml
aur/: PKGBUILD
