[tool.poetry]
name = "code-nautilus"
version = "1.0.0"
description = "Nautilus - Open Directory in VSCode - Context Menu Entry"
authors = ["William J Smyth <codedchaos@zohomail.com>"]
license = "The UnLicense (Public Domain)"

[tool.poetry.dependencies]
python = "^3.9"
PyGObject = "^3.42.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
