[tool.poetry]
name = "code-nautilus"
version = "1.0.0"
description = "Nautilus - Open Directory in VSCode - Context Menu Entry"
authors = ["William J Smyth <codedchaos@zohomail.com>"]
license = "The UnLicense (Public Domain)"

[tool.poetry.dependencies]
python = "^3.9"
PyGObject = "^3.0"
setuptools = "^65.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
